# Visual-odometry

./: CMakeLists.txt  README.md
include/: PointCloud.h  brute_force_search.h  camera.h  defs.h  eigen_covariance.h  eigen_kdtree.h  epipolar_utils.h  evaluation_utils.h  files_utils.h  picp_solver.h  utils.h
src/: CMakeLists.txt  camera.cpp  compute_corr.cpp  eigen_kdtree_test.cpp  epipolar_utils.cpp  essential_picp_test.cpp  evaluate.cpp  evaluation_utils.cpp  files_utils.cpp  initialization_real_data.cpp  initialization_test.cpp  picp_real_data_allKnown.cpp  picp_solver.cpp  picp_solver_test.cpp  read_data_test.cpp  utils.cpp  vo_complete.cpp  vo_daKnown.cpp
src/tests/: essential_picp_test.cpp  initialization_real_data.cpp  picp_real_data_allKnown.cpp
