add_executable(read_data_test read_data_test.cpp utils.cpp files_utils.cpp camera.cpp)
add_executable(init initialization_test.cpp utils.cpp files_utils.cpp camera.cpp)
add_executable(real_init initialization_real_data.cpp utils.cpp files_utils.cpp camera.cpp picp_solver.cpp)
add_executable(picp_test picp_solver_test.cpp utils.cpp files_utils.cpp camera.cpp picp_solver.cpp)
add_executable(whole_test essential_picp_test.cpp utils.cpp files_utils.cpp camera.cpp picp_solver.cpp)
add_executable(picp_known_real picp_real_data_allKnown.cpp utils.cpp files_utils.cpp camera.cpp picp_solver.cpp)
add_executable(vo_daKnown vo_daKnown.cpp utils.cpp files_utils.cpp camera.cpp picp_solver.cpp)
add_executable(compute_corr compute_corr.cpp utils.cpp files_utils.cpp camera.cpp)
add_executable(vo_complete vo_complete.cpp utils.cpp files_utils.cpp camera.cpp picp_solver.cpp)
