add_executable(read_data_test tests/read_data_test.cpp utils.cpp files_utils.cpp camera.cpp)
add_executable(init tests/initialization_test.cpp utils.cpp files_utils.cpp camera.cpp epipolar_utils.cpp)
add_executable(real_init tests/initialization_real_data.cpp utils.cpp files_utils.cpp camera.cpp picp_solver.cpp epipolar_utils.cpp)
add_executable(picp_test tests/picp_solver_test.cpp utils.cpp files_utils.cpp camera.cpp picp_solver.cpp)
add_executable(whole_test tests/essential_picp_test.cpp utils.cpp files_utils.cpp camera.cpp picp_solver.cpp epipolar_utils.cpp)
add_executable(picp_known_real tests/picp_real_data_allKnown.cpp utils.cpp files_utils.cpp camera.cpp picp_solver.cpp)
add_executable(vo_daKnown tests/vo_daKnown.cpp utils.cpp files_utils.cpp camera.cpp picp_solver.cpp epipolar_utils.cpp)
add_executable(vo_complete apps/vo_complete.cpp utils.cpp files_utils.cpp camera.cpp picp_solver.cpp epipolar_utils.cpp)
add_executable(evaluation apps/evaluate.cpp evaluation_utils.cpp utils.cpp files_utils.cpp)

